--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "express": "^4.16.3",
+    "path": "^0.12.7",
+    "serve-static": "^1.13.2",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
