--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "heroku-postbuild": "npm install --only=dev --no-shrinkwrap && npm run build"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "express": "^4.16.3",
     "path": "^0.12.7",
     "pg": "^7.4.3",
